=== nautilus 1.1.18 ===
 
2002-05-27  Alexander Larsson  <alla@lysator.liu.se>

	* configure.in:
	* NEWS:
	Bump version to 1.1.18 and update requirements.

2002-05-27  Jonathan Blandford  <jrb@gnome.org>

	* components/tree/nautilus-tree-model.c
	(TreeNode): make flag storage more efficient.
	(report_node_inserted): report has_child toggled before
	reporting row_inserted.

	* components/tree/nautilus-tree-view.c
	(row_inserted_expand_node_callback): remove evil hack to
	emit has_child toggled on the view.

2002-05-27  Chris Lyttle  <chris@wilddev.net>

	* Makefile.am: remove omf-install dir
	* configure.in: remove nautilus-quick-reference,
	nautilus-release-notes, nautilus-screenshot-guidelines from
	makefiles section.
	* help/omf.make: Added new file for changed omf build system
	* help/xmldocs.make: Updated for new omf build system
	* help/Makefile.am: remove nautilus-quick-reference,
	nautilus-release-notes, nautilus-screenshot-guidelines from subdirs
	and htmldocs.make, sgmldocs.make from EXTRA_DIST
	* help/nautilus-user-manual/C/Makefile.am: Change figs to figdir, add
	legal.xml
	* help/nautilus-user-manual/C/nautilus-user-manual-C.omf: Changed to
	conform to new omf format
	
2002-05-24  Anders Carlsson  <andersca@gnu.org>

	* src/file-manager/fm-desktop-icon-view.c: (volume_ops_callback):
	Don't exit if the file is local. Sigh, won't people test their code?

	* src/file-manager/fm-directory-view.c: (activate_callback):
	Special case "file" type URIs, so that people can still open
	their nfs mounted directories.
	
	* src/nautilus-window-private.h:
	* src/nautilus-window-toolbars.c:
	(nautilus_window_initialize_toolbars):
	* src/nautilus-window.c: (nautilus_window_finalize):
	Remove un-needed theme code.
	
2002-05-24  Michael Meeks  <michael@ximian.com>

	* components/tree/nautilus-tree-view.c
	(row_inserted_expand_node_callback): work around the
	aformentioned gtk+ bug, since it seems not to be being fixed.

2002-05-24  Michael Meeks  <michael@ximian.com>
