@@ -41,6 +41,7 @@
 #include "nautilus-vfs-file.h"
 #include <eel/eel-glib-extensions.h>
 #include <eel/eel-gtk-extensions.h>
+#include <eel/eel-vfs-extensions.h>
 #include <eel/eel-gtk-macros.h>
 #include <eel/eel-string.h>
 #include <grp.h>
@@ -2190,44 +2191,6 @@ nautilus_file_set_integer_metadata (NautilusFile *file,
 		 metadata);
 }
 
-static char *
-make_valid_utf8 (char *name)
-{
-	GString *string;
-	const char *remainder, *invalid;
-	int remaining_bytes, valid_bytes;
-
-	string = NULL;
-	remainder = name;
-	remaining_bytes = strlen (name);
-
-	while (remaining_bytes != 0) {
-		if (g_utf8_validate (remainder, remaining_bytes, &invalid)) {
-			break;
-		}
-		valid_bytes = invalid - remainder;
-
-		if (string == NULL) {
-			string = g_string_sized_new (remaining_bytes);
-		}
-		g_string_append_len (string, remainder, valid_bytes);
-		g_string_append_c (string, '?');
-
-		remaining_bytes -= valid_bytes + 1;
-		remainder = invalid + 1;
-	}
-
-	if (string == NULL) {
-		return name;
-	}
-
-	g_string_append (string, remainder);
-	g_string_append (string, _(" (invalid Unicode)"));
-	g_assert (g_utf8_validate (string->str, -1, NULL));
-	g_free (name);
-	return g_string_free (string, FALSE);
-}
-
 void
 nautilus_file_clear_cached_display_name (NautilusFile *file)
 {
@@ -2314,8 +2277,10 @@ nautilus_file_get_display_name_nocopy (NautilusFile *file)
 		}
 	}
 
-	if (!validated) {
-		name = make_valid_utf8 (name);
+	if (!validated && !g_utf8_validate (name, -1, NULL)) {
+		utf8_name = eel_make_valid_utf8 (name);
+		g_free (name);
+		name = utf8_name;
 	}
 	
 	file->details->cached_display_name = name;
