@@ -1,3 +1,10 @@
+2002-05-27  Michael Meeks  <michael@ximian.com>
+
+	* libnautilus-private/nautilus-file.c (make_valid_utf8):
+	split out into eel.
+	(nautilus_file_get_display_name_nocopy): upd.
+	requires HEAD eel, re-re-close #77892
+
 === nautilus 1.1.18 ===
  
 2002-05-27  Alexander Larsson  <alla@lysator.liu.se>
